turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:26: error: missing arguments for method setX in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
allerVers(setX+50,setY)
          ^